# pysmsh

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  environment.yml  setup.cfg
examples/: Vector field from a scalar potential.ipynb
pysmsh/: __init__.py
pysmsh/core/: colocation.py  dinterval.py  field.py  mesh.py  nutils.py  rectilinear.py
pysmsh/difference/: centered.py  staggered.py  staggered_curvilinear.py  staggered_spherical.py
pysmsh/interpolate/: staggered.py  trilinear.py
pysmsh/tools/: streamtracer.py
