[metadata]
name = pysmsh
author = Jens Pomoell
autor_email = jens.pomoell@helsinki.fi
license = BSD 3-Clause
license_files = LICENSE.md
url = https://github.com/jpomoell/pysmsh
description = Tools for working with constructing grid-based simulation data.
version = 0.1
long_description = file: README.md
classifiers =
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
install_requires =
  multimethod==1.8
  numba==0.55
  numpy
  matplotlib